
??: V2.1.0
  + introduced the safe mode

20120316:
  + main.c/ezthumb.c: introduced the safe mode as part of the -p option.

20120315: V2.0.1
  + main.c: fixed the '-p key' issue which caused by the profile
  + workaround for DVB rip file by this option:
    ezthumb -p scan --accurate --decode-otf Argus_20120222-114427384.ts

20120313:
  + video_duration(): there are two issues in this function. First the video
  header might be non-existed or inaccurate. In that case the video duration
  could be a redicules number. Using a bitrate threshold to workaround this
  problem. Second is that in the function avformat_seek_file(), the
  AVSEEK_FLAG_BYTE acts terrible (with middle.avi). Sometimes there is no way
  to seek to 90% of the video file so have to make a workabound.
 
20120214: V2.0.0
  + GUI mode added

20111214: V1.5.8
  + ezthumb.c, main.c: improved progress display for i-frame ripping by using
  DTS as the indicator

20111213:
  + ezthumb.c: verify the validation of the video file by checking its screen
  resolution and by opening the file.

20111204: V1.5.7
  + smm_signal_break.c: Fixed a bug that the custom signal callback was not
  hooked indeed.

20111125: FFMPEG version list
  + Finally found the culprit. There were two FFMPEG installs in my 
    ubuntu 10.10. One was 0.6.x. Another one appeared as 0.8.x. 
    By removing the latter the problem is gone.

Library:        libavformat  libavcodec  libavdevice  libavutil  libswscale  libavfilter
ffmpeg-0.6.1:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0      1.19.0
ffmpeg-0.6.3:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0      1.19.0
ffmpeg-0.7.8:   52.111.0     52.123.0    52.5.0       50.43.0    0.14.1      1.80.0
ubuntu 10.10:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0
ubuntu extra:   53.0.3       53.1.1      53.0.0       51.1.0     0.14.0



20111124:
  + I've got sick off the endless guess work about the FFMPEG's API version